Add Image Viewer with slideshow mode
- As a new feature an image viewer has been added to the blog list's context menu. It opens a form for viewing this blog's images and optionally run a slideshow. It can be used as a standalone application too.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
@@ -843,4 +843,7 @@ Todos los archivos de índice dentro de esta subcarpeta se pueden usar para la v
   <data name="ImageSizeCategory" xml:space="preserve">
     <value>Tamaño de la imagen (categoría)</value>
   </data>
+  <data name="ViewImages" xml:space="preserve">
+    <value>Ver imagenes</value>
+  </data>
 </root>
