--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -846,4 +846,7 @@ Alle Indexdateien in diesem Unterordner können bei Aktivierung für die globale
   <data name="ImageSizeCategory" xml:space="preserve">
     <value>Bildergröße (Kategorie)</value>
   </data>
+  <data name="ViewImages" xml:space="preserve">
+    <value>Bilder anschauen</value>
+  </data>
 </root>
