Add issue #170 Ability to create different collections
- When you have lots of blogs it becomes more difficult to organize the download folder. It's already possible to override the default download location per blog in its settings, but this involves manual work and the blogs still can't be shown in groups.
- It's now possible to create collections in the advanced settings. Each collection has a name and a download location. The toolbar shows a selection list with the collection names. The default collection is non-deletable and all blogs are shown when it's selected. When a created collection is chosen only the blogs created under it are shown in the list. The blog list can be sorted by the collection column.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -358,4 +358,19 @@ Möchten Sie es jetzt herunterladen?</value>
   <data name="DownloadAndInstallNewVersion" xml:space="preserve">
     <value>Möchten Sie die neue Version jetzt herunterladen und installieren?</value>
   </data>
+  <data name="DefaultCollectionName" xml:space="preserve">
+    <value>&lt;Standard/Alle&gt;</value>
+  </data>
+  <data name="Collection" xml:space="preserve">
+    <value>Sammlung</value>
+  </data>
+  <data name="CollectionNameIsEmpty" xml:space="preserve">
+    <value>Bitte geben Sie einen Sammlungsnamen ein oder löschen Sie die Kategorie!</value>
+  </data>
+  <data name="CannotDeleteUsedCollection" xml:space="preserve">
+    <value>Diese Sammlung wurde bereits verwendet und kann nicht gelöscht werden!</value>
+  </data>
+  <data name="CollectionNameInvalidChars" xml:space="preserve">
+    <value>Der angegebene Name enthält ungültige Pfadnamenzeichen!</value>
+  </data>
 </root>
