Update Ability to assign collections to existing blogs
- Previously only new blogs can be assigned to another collection.
- Now another collection can be assigned to existing blogs. The blog's index files are moved to the collection's index folder, a new blog download folder is created under the collection's root folder. Old media files are not moved.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -376,4 +376,10 @@ Möchten Sie es jetzt herunterladen?</value>
   <data name="SendFeedbackError" xml:space="preserve">
     <value>Beim Senden des Feedbacks ist ein Fehler aufgetreten. Bitte versuchen Sie es später erneut.</value>
   </data>
+  <data name="CannotChangeCollectionOfQueuedBlog" xml:space="preserve">
+    <value>Die zugewiesene Sammlung kann nicht geändert werden, während sich der Blog in der Warteschlange befindet!</value>
+  </data>
+  <data name="CannotChangeCollectionDestFileExists" xml:space="preserve">
+    <value>Die zugewiesene Sammlung kann nicht geändert werden, da am Ziel bereits eine Datei mit diesem Namen vorhanden ist!</value>
+  </data>
 </root>
