--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -1048,7 +1048,8 @@ Mandatory tokens (if not using token %f) to make filenames unique:
   %y  " ({number})" ({number}: 2..n) appended to filename
 Example (saving an image):
   %i_%f for {post id}_{tumblr filename}.jpg
-If additionally the option "group photo sets" is enabled, then for image sets the token %i is replaced by {post id}_{image index} or, if the token isn't used, the images sets are saved as {post id}_{image index}_{filename template}.
+If additionally the option "group photo sets" is enabled, then for image sets the token %i is replaced by {post id}_{image index} or, 
+if the token isn't used, the images sets are saved as {post id}_{image index}_{filename template}.
 Put the option off if you want to use your own template for photo sets.</value>
   </data>
   <data name="ToolTipPrivacyConsentBrowser" xml:space="preserve">
@@ -1160,5 +1161,14 @@ Alternatively you can use the {Issues section} on our project site to get in tou
   </data>
   <data name="Send" xml:space="preserve">
     <value>Send</value>
+  </data>
+  <data name="ToolTipCollection" xml:space="preserve">
+    <value>Assign the blog to this collection.</value>
+  </data>
+  <data name="ToolTipCollectionDescription" xml:space="preserve">
+    <value>If you change the collection the blog's database files with be copied to the new location, but 
+the blog's download folder with the media remains at the old location. A new folder under the 
+collection's root folder will be created and used for newly downloaded files. You can move the 
+old media files manually, if necessary.</value>
   </data>
 </root>
