Fix issue #190 Tumblr Search not working while logged out
- The Tumblr Search had been refactored to use dynamic objects instead of classes for the json structure. Obviously Tumblr uses two different paths whether being logged in or not while searching.
- Now it works again for both.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -382,4 +382,10 @@ Möchten Sie es jetzt herunterladen?</value>
   <data name="CannotChangeCollectionDestFileExists" xml:space="preserve">
     <value>Die zugewiesene Sammlung kann nicht geändert werden, da am Ziel bereits eine Datei mit diesem Namen vorhanden ist!</value>
   </data>
+  <data name="SearchTermNotFound" xml:space="preserve">
+    <value>Suchbegriff '{0}' nicht gefunden!</value>
+  </data>
+  <data name="ErrorDownloadingBlog" xml:space="preserve">
+    <value>Beim Herunterladen von {0} ist ein Fehler aufgetreten: {1} ({2})</value>
+  </data>
 </root>
